# vanityT

./: .gitignore  README.md
engine/: Cargo.toml
engine/src/: lib.rs  main.rs
ui/: next.config.js  package-lock.json  package.json  tailwind.config.ts
ui/public/: vanity_engine_bg.wasm
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/: DecrypterTool.tsx  DifficultyBadge.tsx  HexInput.tsx
ui/src/hooks/: useVanityEngine.ts
ui/src/workers/: vanity.worker.ts
