[package]
name = "vanity-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
k256 = { version = "0.13.3", default-features = false, features = ["ecdsa"] }
sha3 = "0.10.8"
rand = "0.8.5"
getrandom = { version = "0.2.12", features = ["js"] }
zeroize = "1.8.1"
hex = "0.4.3"
