[package]
name = "vanity-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
k256 = { version = "0.13.3", default-features = false, features = ["ecdsa", "arithmetic"] }
sha3 = "0.10.8"
rand = "0.8.5"
getrandom = { version = "0.2.12", features = ["js"] }
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
zeroize = "1.8.1"
hex = "0.4.3"
aes-gcm = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10.8"
base64 = "0.22"
rpassword = "7.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
